# advent-of-code-2022

./: Cargo.toml  LICENSE  run-all.sh
01/: Cargo.toml
01/src/: main.rs
02/src/: main.rs
1/: Cargo.toml
1/src/: main.rs
